--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "rm -fR lib; tsc --declaration",
     "add-all": "git add -A",
     "test": "jest",
-    "precommit-msg": "echo 'Pre-commit checks...' && exit 0"
+    "precommit-msg": "echo 'Pre-commit checks...' && exit 0",
+    "release": "release-it"
   },
   "pre-commit": [
     "precommit-msg",
@@ -25,6 +26,7 @@
     "@types/lodash": "^4.14.106",
     "jest": "^24.0.0",
     "pre-commit": "^1.2.2",
+    "release-it": "^14.2.1",
     "ts-jest": "^24.0.0",
     "ts-node": "^8.0.0",
     "tslint": "^5.9.1",
