--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "build": "rm -fR lib; tsc --declaration",
     "add-all": "git add -A",
-    "test": "jest",
+    "test": "jest --forceExit --detectOpenHandles",
     "precommit-msg": "echo 'Pre-commit checks...' && exit 0",
     "release": "release-it"
   },
@@ -22,40 +22,18 @@
     "add-all"
   ],
   "devDependencies": {
-    "@types/jest": "^24.0.0",
-    "@types/lodash": "^4.14.106",
-    "jest": "^24.0.0",
+    "@types/jest": "^26.0.0",
+    "@types/lodash": "^4.14.164",
+    "jest": "^26.0.0",
     "pre-commit": "^1.2.2",
     "release-it": "^14.2.1",
-    "ts-jest": "^24.0.0",
-    "ts-node": "^8.0.0",
-    "tslint": "^5.9.1",
+    "ts-jest": "^26.0.0",
+    "ts-node": "^9.0.0",
+    "tslint": "^6.1.3",
     "typescript": "^4.0.0"
   },
   "dependencies": {
-    "lodash": "^4.17.5"
+    "lodash": "^4.17.20"
   },
-  "types": "./lib/index.d.ts",
-  "jest": {
-    "verbose": true,
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts}",
-      "!src/examples/**",
-      "!**/node_modules/**",
-      "!**/vendor/**"
-    ],
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    },
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
-  }
+  "types": "./lib/index.d.ts"
 }
